Make JAR file work with external files

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.example</groupId>
     <artifactId>YamlLocalisation</artifactId>
     <version>1.0.0</version>
+
     <build>
         <!-- Use the project's ID as jar file name -->
         <finalName>${project.artifactId}</finalName>
@@ -37,6 +38,28 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.1</version>
+                <configuration>
+                    <relocations>
+                        <relocation>
+                            <pattern> org.yaml.snakeyaml</pattern>
+                            <shadedPattern>be.dezijwegel.yamllocalisation</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
