Fix platform encoding warning

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>YamlLocalisation</artifactId>
     <version>1.0.0</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+
     <build>
         <!-- Use the project's ID as jar file name -->
         <finalName>${project.artifactId}</finalName>
